--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -1,40 +1,85 @@
 {
-    "plugins\/mobile\/plugin_info\/info.xml": {
-        "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
-        "Aucune": "Aucune"
-    },
-    "plugins\/mobile\/desktop\/php\/mobile.php": {
-        "Ajouter un mobile": "Ajouter un mobile",
+    "plugins\/homebridge\/desktop\/php\/homebridge.php": {
+        "Ajouter un homebridge": "Ajouter un homebridge",
         "Rechercher": "Rechercher",
-        "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
+        "Equipements": "Equipements",
+        "Alarmes": "Alarmes",
+        "Thermostats": "Thermostats",
+        "Scénarios": "Scénarios",
+        "Gestion": "Gestion",
+        "DebugInfo": "DebugInfo",
+        "Configuration": "Configuration",
+        "Santé": "Santé",
+        "Mes Téléphones homebridges": "Mes Téléphones homebridges",
+        "Le(s) Plugin(s) Compatible(s)": "Le(s) Plugin(s) Compatible(s)",
+        "Plugin Spécial": "Plugin Spécial",
+        "Via Type générique": "Via Type générique",
+        "Non transmis": "Non transmis",
+        "Le(s) Plugin(s) Non Testé(s)": "Le(s) Plugin(s) Non Testé(s)",
+        "Transmis à l\\'app": "Transmis à l\\'app",
+        "Types Génériques par Pièce": "Types Génériques par Pièce",
+        "Les Scénarios": "Les Scénarios",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder",
+        "Infos envoyées à l'app": "Infos envoyées à l'app",
+        "homebridge": "homebridge",
+        "Notifications": "Notifications",
+        "Commandes": "Commandes",
         "Général": "Général",
-        "Nom de l'équipement mobile": "Nom de l'équipement mobile",
+        "Nom de l'équipement homebridge": "Nom de l'équipement homebridge",
         "Nom de l'équipement template": "Nom de l'équipement template",
         "Objet parent": "Objet parent",
         "Aucun": "Aucun",
         "Activer": "Activer",
         "Visible": "Visible",
-        "Type de Mobile": "Type de Mobile",
+        "Type de homebridge": "Type de homebridge",
+        "iPhone": "iPhone",
+        "Android": "Android",
+        "Windows (non officiel)": "Windows (non officiel)",
         "Utilisateurs": "Utilisateurs",
-        "Mobile": "Mobile",
+        "QRCode": "QRCode",
+        "Notifications Infos :": "Notifications Infos :",
+        "Id homebridge :": "Id homebridge :",
+        "Iq": "Iq"
+    },
+    "plugins\/homebridge\/plugin_info\/configuration.php": {
         "Homebridge": "Homebridge",
-        "Informations": "Informations",
-        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
-        "Dépendances": "Dépendances",
-        "Nom": "Nom",
-        "Statut": "Statut",
-        "Installation": "Installation",
-        "Dernière installation": "Dernière installation",
-        "Démon": "Démon",
-        "Configuration": "Configuration",
-        "(Re)Démarrer": "(Re)Démarrer",
-        "Arrêter": "Arrêter",
-        "Gestion automatique": "Gestion automatique",
-        "Dernier lancement": "Dernier lancement",
-        "Commande": "Commande",
-        "Option": "Option",
-        "Action": "Action",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder"
+        "Adresse Ip Homebridge": "Adresse Ip Homebridge",
+        "Nom Homebridge": "Nom Homebridge",
+        "MAC Homebridge": "MAC Homebridge",
+        "PIN Homebridge (format : XXX-XX-XXX)": "PIN Homebridge (format : XXX-XX-XXX)",
+        "Fonctionne uniquement pour ajouter Jeedom, pour les plateformes supplémentaires, utilisez le PIN": "Fonctionne uniquement pour ajouter Jeedom, pour les plateformes supplémentaires, utilisez le PIN",
+        "Réparation de Homebridge": "Réparation de Homebridge",
+        "Réparer": "Réparer",
+        "Réparer & Réinstaller": "Réparer & Réinstaller",
+        "Configuration avancée": "Configuration avancée",
+        "Plateforme Homebridge supplémentaire": "Plateforme Homebridge supplémentaire",
+        "Accessoire Homebridge supplémentaire": "Accessoire Homebridge supplémentaire",
+        "Activer les graphiques dans Eve (Alpha)": "Activer les graphiques dans Eve (Alpha)",
+        "(Aucun Support) Fonctionne seulement pour Température, Humidité, Pression, Porte\/Fenêtre, Présence.  Les graphiques ont été développés par ingénierie inversée des composants Elgato Eve et il peut y avoir des incohérences. Les données des graphiques sont les données collectées lorsque le démon Homebridge est démarré, il peut donc manquer certaines informations. Les graphiques sont uniquement à titre informatif.": "(Aucun Support) Fonctionne seulement pour Température, Humidité, Pression, Porte\/Fenêtre, Présence.  Les graphiques ont été développés par ingénierie inversée des composants Elgato Eve et il peut y avoir des incohérences. Les données des graphiques sont les données collectées lorsque le démon Homebridge est démarré, il peut donc manquer certaines informations. Les graphiques sont uniquement à titre informatif.",
+        "Format incorrect (XXX-XX-XXX)": "Format incorrect (XXX-XX-XXX)",
+        "Code PIN interdit par Apple": "Code PIN interdit par Apple",
+        "Format correct": "Format correct",
+        "Configuration avancée, à vos propres risques !!! Aucun support ne sera donné !!!": "Configuration avancée, à vos propres risques !!! Aucun support ne sera donné !!!",
+        "Configuration Plateforme Homebridge supplémentaire": "Configuration Plateforme Homebridge supplémentaire",
+        "Configuration Accessoire Homebridge supplémentaire": "Configuration Accessoire Homebridge supplémentaire",
+        "Etes-vous sûr de vouloir réparer Homebridge ? Vous devrez réinstaller les équipements sur votre appareil iOS (Merci, de supprimer la passerelle Jeedom sur l\\'app Home).": "Etes-vous sûr de vouloir réparer Homebridge ? Vous devrez réinstaller les équipements sur votre appareil iOS (Merci, de supprimer la passerelle Jeedom sur l\\'app Home).",
+        "Réparation Homebridge effectuée, merci de patienter jusqu'au démarrage du démon": "Réparation Homebridge effectuée, merci de patienter jusqu'au démarrage du démon",
+        "Etes-vous sûr de vouloir supprimer et reinstaller Homebridge ? Vous devrez réinstaller les équipements sur votre appareil iOS (Merci, de supprimer la passerelle Jeedom sur l\\'app Home).": "Etes-vous sûr de vouloir supprimer et reinstaller Homebridge ? Vous devrez réinstaller les équipements sur votre appareil iOS (Merci, de supprimer la passerelle Jeedom sur l\\'app Home).",
+        "Réinstallation Homebridge effectuée, merci de patienter jusqu'à la fin de l'installation des dépendances": "Réinstallation Homebridge effectuée, merci de patienter jusqu'à la fin de l'installation des dépendances"
+    },
+    "plugins\/homebridge\/desktop\/modal\/platformHB.homebridge.php": {
+        "!!! Cette configuration est en mode avancé !!! à vos risques et périls !!! aucun support ne sera donné !!!": "!!! Cette configuration est en mode avancé !!! à vos risques et périls !!! aucun support ne sera donné !!!",
+        "Le contenu doit être un objet JSON de type platform": "Le contenu doit être un objet JSON de type platform",
+        "Si de multiples plateformes, les séparer par |": "Si de multiples plateformes, les séparer par |",
+        "le plugin homebridge correspondant doit être installé avec <i>npm<\/i> (homebridge-camera-ffmpeg est déjà installé et utilise <i>avconv<\/i> ou <i>ffmpeg<\/i> s'il est présent)": "le plugin homebridge correspondant doit être installé avec <i>npm<\/i> (homebridge-camera-ffmpeg est déjà installé et utilise <i>avconv<\/i> ou <i>ffmpeg<\/i> s'il est présent)",
+        "Exemples camera": "Exemples camera",
+        "Trouvez votre camera": "Trouvez votre camera",
+        "NB : Une nouvelle Plateforme doit être ajoutée à nouveau dans l'application \"Maison\" avec le même code PIN": "NB : Une nouvelle Plateforme doit être ajoutée à nouveau dans l'application \"Maison\" avec le même code PIN",
+        "Sauvegarder les changements": "Sauvegarder les changements"
+    },
+    "plugins\/homebridge\/desktop\/js\/platformFile.js": {
+        "Sauvegarde de la configuration réussie. Relancez le demon": "Sauvegarde de la configuration réussie. Relancez le demon",
+        "Echec de la sauvegarde de la configuration : ": "Echec de la sauvegarde de la configuration : "
     }
 }
