--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -20,7 +20,7 @@
         "Types Génériques par Pièce": "Tipos genéricos por pieza",
         "Les Scénarios": "Los Escenarios",
         "Supprimer": "Borrar",
-        "Sauvegarder": "Salvar",
+        "Sauvegarder": "Guardar",
         "Infos envoyées à l'app": "Información enviada a la aplicación",
         "homebridge": "homebridge",
         "Notifications": "Notificaciones",
@@ -86,7 +86,7 @@
         "Cliquez sur un équipement pour voir ses types génériques": "Haga clic en el equipo para ver sus tipos genéricos",
         "Activer la pièce": "Activar habitación",
         "Type Générique de l'objet": "Tipo de objeto genérico",
-        "Sauvegarder": "Salvar",
+        "Sauvegarder": "Guardar",
         "  Envoyer à Homebridge  ": "Enviar a Homebridge",
         "Id Cmd": "Id Cmd",
         "Nom de la Commande": "Nombre del comando",
@@ -113,9 +113,9 @@
         "Long Click": "Click largo",
         "Merci de vider les valeurs que vous n'utilisez pas (pas zéro, vide !)": "Por favor, vacíe los valores que no utilice (no cero, vacío!)",
         "Modifications sauvegardées avec succès": "Modificaciones salvadas con éxito",
-        "Sauvegarde effectuée avec succès": "Salvado realizado con éxito",
-        "Sauvegarde de la configuration réussie.": "Salvado de la configuración correcta.",
-        "Echec de la sauvegarde de la configuration : ": "Error de salvado de la configuración :"
+        "Sauvegarde effectuée avec succès": "Guardado realizado con éxito",
+        "Sauvegarde de la configuration réussie.": "Guardado de la configuración correcta.",
+        "Echec de la sauvegarde de la configuration : ": "Error de guardado de la configuración :"
     },
     "plugins\/homebridge\/desktop\/modal\/info_app.homebridge.php": {
         "Copier tout dans le presse-papier": "Copiar todo al portapapeles",
@@ -155,6 +155,6 @@
         "Si de multiples accessoires, les séparer par |": "Si hay varios accesorios, sepárelos con |",
         "le plugin homebridge correspondant doit être installé avec <i>npm<\/i>": "el plugin homebridge correspondiente debe ser instalado con <i>npm</i>",
         "NB : Un nouvel Accessoire doit être ajouté à nouveau dans l'application \"Maison\" avec le même code PIN": "Nota: Un nuevo accesorio debe ser agregado nuevamente en la aplicación \"Home\" con el mismo código PIN.",
-        "Sauvegarder les changements": "Salvar cambios"
+        "Sauvegarder les changements": "Guardar cambios"
     }
 }
