--- a/doc/es_ES/changelog.asciidoc
+++ b/doc/es_ES/changelog.asciidoc
@@ -12,13 +12,14 @@
     * Gestion automatique pour la serrure TheKeys
     * Séparation des types "Prise" et "Interrupteur"
     * Les prises dans Jeedom sont maintenant des vrais prises dans Homebridge
-    * Les scénarios Jeedom sont ajoutés en tant qu'interrupteur dans Homebridge (si sélectionné dans la configuration) [En cours]
+    * Les scénarios Jeedom sont ajoutés en tant qu'interrupteur dans Homebridge (si sélectionné dans la configuration)
     * Composant "Pression" modifié pour apparaitre mieux dans Eve
     * Les interrupteur programmables dans homekit font leur apparition :)
       ** Interrupteur Programmable (Multi-Valeur) (Homebridge) : Il s'agit d'un interrupteur avec une commande de type info qui contiendra plusieurs valeurs en fonction du type de click effectué. ("click", "double_click", "long_click" par exemple ou encore 11 , 21 , 30). Ces valeurs sont configurables.
       ** Interrupteur Programmable Binaire (Simple Click) (Homebridge) : Il s'agit d'un interrupteur ou la commande de type info est un binaire et correspond à un simple click sur le bouton.
       ** Interrupteur Programmable Binaire (Double Click) (Homebridge) : Il s'agit d'un interrupteur ou la commande de type info est un binaire et correspond à un double click sur le bouton.
       ** Interrupteur Programmable Binaire (Long   Click) (Homebridge) : Il s'agit d'un interrupteur ou la commande de type info est un binaire et correspond à un long click sur le bouton.
+    * Support (Alpha) de Docker : quelques modifications ont été faites pour faciliter l'utilisation du plugin sous Docker. Pas encore complètement compatible mais on s'en approche...
     * Affichage des graphiques dans l'application Eve (support Alpha). Fonctionne pour les types suivants :
       ** Température (chaque point de donnée est une moyenne des 10min précédentes)
       ** Humidité (chaque point de donnée est une moyenne des 10min précédentes)
